--- a/src/components/ExperimentBlock/ExperimentBlock.css
+++ b/src/components/ExperimentBlock/ExperimentBlock.css
@@ -2,12 +2,23 @@
     cursor: none;
 }
 
-#experiment-results {
-    margin: 2rem;
-    text-align: left;
+.instructions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
 }
 
-#experiment-results h2 {
-    text-align: center;
+.instructions .icon {
+  margin: 0 0 2rem;
+  width: 280px;
+  height: 200px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
+.instructions .copy p {
+  max-width: 800px;
+  text-align: left;
+}
