--- a/src/components/SurveyManager/SurveyManager.css
+++ b/src/components/SurveyManager/SurveyManager.css
@@ -21,16 +21,6 @@
     z-index: 10;
 }
 
-.thinker-icon {
-    position: absolute;
-    bottom: 0;
-    left: 50px;
-    height: 217px;
-    width: 157px;
-    background: url('/images/thinker.png') no-repeat;
-    z-index: 10;
-}
-
 .issue-row {
     margin: 1rem;
     display: flex;
@@ -54,3 +44,20 @@
     font-weight: 800;
 }
 
+.surveySection {
+    position: fixed;
+    width: 100%;
+    overflow-y: scroll;
+    padding-bottom: 4rem;
+}
+
+.social-values-copy-modal {
+    background: rgba(255,255,255,0.95);
+    margin: 4rem auto 2rem;
+    padding: 2rem;
+    text-align: left;
+
+    border-radius: 5px;
+    box-shadow: 1px 1px 1px 1px #333;
+    max-width: 675px;
+}
