--- a/src/components/SurveyManager/SurveyManager.css
+++ b/src/components/SurveyManager/SurveyManager.css
@@ -21,29 +21,6 @@
     z-index: 10;
 }
 
-.issue-row {
-    margin: 1rem;
-    display: flex;
-    justify-content: space-between;
-}
-
-.issue-card.empty {
-    background: lightgreen;
-}
-.issue-card.card {
-    margin: 1rem;
-    padding: 20px;
-    max-width: 200px;
-
-    border: 2px solid darkgreen;
-    /* box-shadow: inset 4px 0px 2px rgba(25, 100, 25, 0.6), inset -3px -4px 2px rgba(0, 0, 0, .4); */
-    box-shadow: inset 7px 0px 2px rgba(25, 180, 25, 1), inset -3px -6px 2px rgba(0, 0, 0, .4);
-    transform: rotate3d(1, 1, 1, -75deg);
-}
-.issue-card.card h5 {
-    font-weight: 800;
-}
-
 .surveySection {
     position: fixed;
     width: 100%;
@@ -95,7 +72,7 @@
 }
 
 .sec2-issue-categorize {
-
+    user-select: none;
 }
 
 .sec2-issue-categorize .issue-drop {
@@ -107,10 +84,68 @@
     margin: 1rem;
     flex-grow: 1;
     height: 380px;
+    position: relative;
 }
-.sec2-issue-categorize .cat.most-important {
+.dropWrapper {
+    display: flex;
+    top: 60px;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    flex-flow: column wrap;
+}
+.sec2-issue-categorize .cat.most_important {
     background: lightgreen;
 }
-.sec2-issue-categorize .cat.less-important {
+.sec2-issue-categorize .cat.less_important {
     background: lightgray;
+}
+
+.issue-queue {
+    background: #666;
+    height: 200px;
+    right: 10px;
+    position: absolute;
+    bottom: 50px;
+    left: 200px;
+    overflow: hidden;
+
+    box-shadow: inset 2px 2px 10px rgba(25, 25, 25, 0.6), inset -3px -4px 2px rgba(0, 0, 0, 0.4);
+}
+
+
+
+
+.issue-row {
+    display: flex;
+    justify-content: space-between;
+    overflow: hidden;
+    height: 180px;
+    margin: 10px;
+    flex-wrap: wrap;
+}
+
+.issue-card.card {
+    flex-direction: column;
+    justify-content: center;
+
+    margin: 0.5rem;
+    padding: 8px 45px 0px 15px;
+    max-width: 210px;
+    cursor: pointer;
+    font-size: 1rem;
+    
+    border: 1px solid darkgreen;
+    box-shadow: inset 3px 1px 2px rgba(25, 180, 25, 1), inset -3px -4px 2px rgba(0, 0, 0, .4);
+    max-height: 60px;
+}
+
+.issue-card.card h5 {
+    font-weight: 800;
+    font-size: 1rem;
+}
+
+.dropWrapper .issue-card.card h5 {
+    font-weight: 700;
+    font-size: 0.9rem;
 }
