--- a/src/components/SurveyManager/SurveyManager.css
+++ b/src/components/SurveyManager/SurveyManager.css
@@ -133,7 +133,7 @@
 
     margin: 0.5rem;
     padding: 8px 45px 0px 15px;
-    max-width: 210px;
+    max-width: 225px;
     cursor: pointer;
     font-size: 1rem;
     
@@ -208,4 +208,10 @@
     width: 512px;
     background-repeat: no-repeat;
     background-size: 512px auto;
+}
+
+.finishedButton:disabled,
+.finishedButton {
+    margin: auto;
+    border-color: #555;
 }
