--- a/src/components/SurveyManager/SurveyManager.css
+++ b/src/components/SurveyManager/SurveyManager.css
@@ -295,5 +295,16 @@
     transform: scale(1.1);
 }
 .surveyFinal .issue-card.selected_issue h5 {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+}
+
+.thank-you-copy {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    background: black;
+    color: white;
+    padding: 1rem 2rem;
+    z-index: 10;
 }
