--- a/src/components/SurveyManager/SurveyManager.css
+++ b/src/components/SurveyManager/SurveyManager.css
@@ -24,9 +24,6 @@
 .surveySection {
     position: fixed;
     width: 100%;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    padding-bottom: 4rem;
 }
 
 .social-values-sec1-issue-modal,
@@ -307,4 +304,135 @@
     color: white;
     padding: 1rem 2rem;
     z-index: 10;
+}
+
+
+.survey-issues-bg {
+    background: url('/images/issues-bg.png');
+    background-size: cover;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: -10;
+}
+.survey-issues-bg:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #000;
+    z-index: -9;
+    opacity: 0.3;
+}
+
+.green-bg {
+    background: lightgreen;
+}
+
+.black-bg {
+    background: black;
+}
+
+.surveySection h1 {
+    padding: 1rem;
+    background: white;
+    width: 50%;
+    margin: auto;
+    border-radius: 5px;
+}
+
+.thinker-icon-center:after {
+    content: "";
+    position: absolute;
+    background-image: url(/images/thinker.png);
+    background-repeat: no-repeat;
+    
+    background-size: 197px auto;
+    bottom: 0;
+    height: 270px;
+    width: 197px;
+    z-index: 10;
+
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.figure_handsonhips_center {
+    position: absolute;
+    bottom: 0;
+    height: 50%;
+    z-index: 10;
+
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.figure_handsonhips_center img {
+    height: 100%;
+}
+
+.figure_pondering img {
+    height: 100%;
+}
+.figure_pondering {
+    position: absolute;
+    height: 50%;
+    z-index: 10;
+
+}
+.figure_pondering_large_top {
+    overflow: hidden;
+}
+.figure_pondering_large_top img {
+    height: 175%;
+}
+.figure_pondering_center_bottom {
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+}
+
+.thinker-icon-bottom-left:after {
+    content: "";
+    position: absolute;
+    background-image: url(/images/thinker.png);
+    background-repeat: no-repeat;
+    
+    left: 50px;
+    bottom: 0;
+    height: 217px;
+    width: 157px;
+    background-size: 157px auto;
+    z-index: 10;
+    transform: rotateY(180deg);
+}
+
+
+.sec1-inner {
+    position: absolute;
+    top: 0;
+    width: 100%;
+
+    height: 100%;
+    overflow-y: scroll;
+}
+
+.sec1-inner.welcome {
+    flex-direction: column;
+    display: flex;
+    justify-content: space-evenly;
+
+    height: 50%;
+}
+.sec1-inner.copy1,
+.sec1-inner.copy2 {
+    padding: 3rem 0;
+}
+
+.sec1-inner button {
+    margin: auto;
+    border: 1px solid #333;
 }
