--- a/src/components/SurveyManager/SurveyManager.css
+++ b/src/components/SurveyManager/SurveyManager.css
@@ -182,6 +182,45 @@
 
 
 
+
+
+
+
+
+
+
+/**
+    INFORMATIO ICON
+*/
+.information-icon {
+    position: absolute;
+    cursor: pointer;
+}
+.information-icon img {
+    height: 30px;
+    width: 30px;
+    opacity: 0.7;
+    transition: opacity .3s ease;
+}
+.information-icon img:hover {
+    opacity: 1;
+}
+
+.sec1_thought_bubble .information-icon {
+    right: 10px;
+    top: 10px;
+}
+.issue-card .information-icon {
+    right: 10px;
+    top: 45%;
+    transform: translateY(-50%);
+}
+
+
+
+
+
+
 /**
     ISSUE INFO MODAL
 */
