--- a/src/App.css
+++ b/src/App.css
@@ -91,3 +91,26 @@ pre {
 .surveySection {
     height: 100%;
 }
+
+
+
+
+
+
+
+
+
+
+.topBanner {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    padding: 1rem;
+    background: white;
+    border-bottom: 1px solid #666;
+}
+.survey-consent .topBanner {
+    position: static;
+    padding: 1rem;
+    border-bottom: 1px solid #666;
+}
