navigate progress bar

--- a/src/components/SurveyWellBeing/SurveyWellBeing.css
+++ b/src/components/SurveyWellBeing/SurveyWellBeing.css
@@ -77,9 +77,19 @@
     color: white;
     border-color: #004baa;
     box-shadow: 0px 0px 1px 1px lightblue;
+    cursor: pointer;
 }
-
-
+.ProgressBar section.completed:hover {
+    opacity: 0.7;
+}
+.ProgressBar section.completed.active {
+    cursor: auto;
+    border-color: #139e13;
+    box-shadow: 0px 0px 1px 1px lightgreen;
+}
+.ProgressBar section.completed.active:hover {
+    opacity: 1;
+}
 
 
 
