--- a/src/components/Survey/SurveyManager/SurveyManager.css
+++ b/src/components/Survey/SurveyManager/SurveyManager.css
@@ -283,13 +283,125 @@
 /*
     SECTION 2 
 */
+.sec2-issue-categorize {
+    user-select: none;
+}
+
+.sec2-issue-categorize .issue-drop {
+    display: flex;
+}
+
+
+.sec2-issue-categorize .issue-drop .cat {
+    margin: 1rem;
+    flex-grow: 1;
+    height: 380px;
+    position: relative;
+}
+
+.sec2-issue-categorize .cat.most_important {
+    background: lightgreen;
+}
+.sec2-issue-categorize .cat.less_important {
+    background: lightgray;
+}
+
+.issue-queue {
+    background: #666;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    position: relative;
+    bottom: 50px;
+    left: 200px;
+    right: -50px;
+    overflow: hidden;
+    border-radius: 5px;
+    box-shadow: inset 2px 2px 10px rgba(25, 25, 25, 0.6), inset -3px -4px 2px rgba(0, 0, 0, 0.4);
+}
+.showInstructionsButton {
+    border-radius: 15px;
+    box-shadow: inset -2px -3px 5px #aaa;
+    font-size: 0.8rem;
+    cursor: pointer;
+}
+.showInstructionsButton:hover {
+    background: #eee;
+}
+.issue-queue .showInstructionsButton {
+    display: block;
+    margin-left: 5px;
+    margin-top: 2px;
+}
+
+.dropWrapper {
+    display: flex;
+    top: 60px;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    flex-flow: column wrap;
+    overflow: hidden;
+}
+.sec2 .sec1-inner button {
+    margin-bottom: 2rem;
+}
 .tray-buttons {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
+    margin-right: 200px;
+}
+.issue-row {
+    display: flex;
+    overflow: hidden;
+    height: 180px;
+    margin: 0 10px;
+    flex-wrap: wrap;
 }
 
+.issue-card.card {
+    flex-direction: column;
+    justify-content: center;
+
+    margin: 0.5rem;
+    padding: 8px 45px 0px 15px;
+    max-width: 225px;
+    cursor: pointer;
+    font-size: 1rem;
+    
+    border: 1px solid darkgreen;
+    border-radius: 5px;
+    box-shadow: inset 3px 1px 2px rgba(25, 180, 25, 1), inset -3px -4px 2px rgba(0, 0, 0, .4);
+    max-height: 60px;
+}
+
+.issue-card.card h5 {
+    font-weight: 800;
+    font-size: 1rem;
+}
+
+.dropWrapper .issue-card.card h5 {
+    font-weight: 700;
+    font-size: 0.9rem;
+}
+
+.finishedButton:disabled,
+.finishedButton {
+    margin: auto;
+    border-color: #555;
+}
+
+/******
+        SECTION 2 INSTRUCTIONS
+*/
+.section2-instructions .instruction-copy {
+    color: white;
+    max-width: 900px;
+    margin: 2rem auto;
+    text-align: left;
+    padding: 1rem;
+}
 
 
 
@@ -611,3 +723,53 @@
 .range-feedback {
     font-weight: 700;
 }
+
+
+
+
+
+
+
+
+.btn.finalIssueSelection {
+    margin: 1rem;
+}
+
+.finalIssue-textarea {
+    display: block;
+    width: 100%;
+    height: 150px;
+}
+
+.surveyFinal .issue-row {
+    height: auto;    
+}
+
+.surveyFinal .issue-card {
+    max-height: none;
+    min-height: none;
+    height: 90px;
+}
+
+.surveyFinal .issue-card.most_important {
+    background: yellow;
+}
+.surveyFinal .issue-card.selected_issue {
+    transform: scale(1.1);
+}
+.surveyFinal .issue-card.selected_issue h5 {
+    font-size: 1.2rem;
+}
+
+.thank-you-copy {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    background: black;
+    color: white;
+    padding: 1rem 2rem;
+    z-index: 10;
+}
+
+
